<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingBottom="28dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            style="@style/WatchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">
            <NumberPicker
                android:id="@+id/hour_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hour" />
            <TextView
                style="@style/WatchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_separator"
                android:importantForAccessibility="no"
                android:textSize="24sp" />
            <NumberPicker
                android:id="@+id/minute_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/minute" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/WatchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
